syntax = "proto3";

package onight.zjfae.afront.gens.v4;

//Generated By BrewRobot:Wed Sep 20 10:06:00 CST 2017

message PBIFE_prdsubscribequery_prdQuerySubscribeTradeProductListNewHome{
	///ife/prdsubscribequery/prdQuerySubscribeTradeProductListNew.html
	message IconsList{
    	string iconsPosition = 1;	 //,图标具体方位,String,不校验,是,
    	string uuid = 2;	 //,图标uuid,String,不校验,是,
    }
	message PageInfo{
		string pageSize = 1;	 //,页大小,String,不校验,是,
		string pageIndex = 2;	 //,当前页,String,不校验,是,
		string pageCount = 3;	 //,总PBIFE_prdquery_prdQueryProductDetails页数,String,不校验,是,
		string totalCount = 4;	 //,总条数,String,不校验,是,
	}

	message ProductTradeInfoNewObject{
                    string id =1; // ,id,String,不校验,是
                    string orderType =2; //,预约类型,String,0-特约;1-普通预约;2-定值预约
                    string productCode = 3; //,产品Code，String
                    string productName = 4; //,产品名称，String
                    string buyStartDate = 5; //,购买开始时间，String
                    string buyEndDate = 6; //,购买结束时间，String
                    string buyEndTimes= 7; //,购买剩余时长，String
                    string manageStartDate =8;//,管理期限开始时间，String
                    string manageEndDate = 9;//,管理期限结束时间，String
                    string riskLevel= 10;//,风险等级，String
                    string riskLevelStr =11;//,风险等级前台展示，String
                    string buyerSmallestAmount=12; //,买家最小购买单位，String
                    string buyTotalAmount=13;//,发行总规模，String
                    string buyRemainAmount=14;//,发行剩余量，String
                    string remainAmountInit=15;//,普通份额不变，String
                    string subjectType=16;//,产品类别，String
                    string subjectTypeName=17;//,产品类别名称，String
                    string prodSubType=18;//,产品小类，String
                    string deadline=19;//,理财期限，String
                    string expectedMaxAnnualRate=20;//,预期年化收益率，String
                    string productSubType=21;//,挂牌方式，String
                    string status=22;//,扩展字段 产品的状态，String
                    string mostHolderNum=23;//,购买人数（上限）,String
                    string specialCustomerNum=24;//,特约客户人数,String
                    string orderBy=25;//,排序列名,String
                    string orderAsc=26;//,排序顺序,String
                    string brokerCodeList=27;//,经纪商编号，如果登录使用用户经纪商编号，未登录，如果使用参数中marketingChannel，默认使用浙金中心经纪商编号,List
                    string brokerNoList=28;//,渠道编号，如果登录使用用户渠道编号，默认使用浙金中心渠道编号,List
                    string channelNoList=29;//如果是网站端，添加网站渠道,List
                    string warnFlag=30;//,是否开始销售 0表示没有  1表示已经开始,String
                    string isSpecial=31; //,是否是特约客户  0 否 1是,String
                    string onlyMobile=32; //是否手机专享,String
                    string onlyWeiXin=33;//,是否微信专享,String
                    string account=34;//,账户号,String
                    string isAccepted=35;// 是否购买,String
                    string deadLineList=36;//,产品剩余期限查询条件,List
                    string expectedMaxAnnualRateList=37;//,预期收益率查询条件,List
                    string riskLevelList=38;//,风险等级查询条件,List
                    string subjectTypeList=39;//,产品类型查询条件,List
                    string buyerSmallestAmountList=40;//,起购金额查询条件,List
                    string saleObjectList=41;//,销售对象查询条件,List
                    string onlyNew=42;//,新用户专享字段   0,老用户;1,新用户,String
                    string process=43;//,剩余百分比进度条,String
                    string sellingStatus=44;//,售卖状态 0-敬请期待，1-售卖中，2-已售罄 3-已结束,String
                    string canBuyNum=45;//,可购人数,String
                    string isSpecialProduct=46;//,是否是特约产品  0 否 1是,String
                    string subscribeNum=47;//,普通客户购买人数,String
                    string specialAmountInit=48;//,特约份额不变,String
                    string isTransfer=49;//,是否可转让,String
                    string deadLineBegin=50;//,期限开始,String
                    string deadLineEnd=51;//,期限结束,String
                    string generalCustomerUsedNum=52;//, ,String
                    string isOnlyNew=53;//,用于返回全部新客 或者全部非新客 ,String"
                    string productCodeAndSerialNoList=54;//,系列编号 ,String[]
                    string accreditedBuyIs=55;//,是否合格投资者购买(1-是;0-否) ,String
                    string accreditedTransferIs=56;//,是否合格投资者受让(1-是;0-否) ,String
                    string serialNo=57;//,产品系列 ,String
                    string ratingType=58;//,评级类型 ,String
                    string ratingId=59;//,评级附件ID ,String
                    string ratingTitle=60;//,评级附件标题 ,String
                    string isReleaseAnnouncemen=61;//,是否发布公告 ,String
                    string productCancel=62;//,产品购买期是否允许撤单，0 否  1是 ,String
                    string productSpecialArea=63;//,产品所属专区 A普通发行 B普通募集 C普通转让 D合格投资者发行 E合格投资者募集 F合格投资者转让 G高净值发行 H高净值募集 I高净值转让 J特约交易 K特定转让 ,String
                    string isMyTransfer=64;//,是否我的挂单 ,String
                    string tradeAccount=65;//,交易账户 ,String
                    string leftDays=66;//,剩余天数 ,String
                    string delegationId=67;//,委托表PK ,String
                    string delegationCode=68;//,委托编号(产品编号+委托时间+6位编号) ,String
                    string ifAllBuy=69;//,是否须一次全额购买 ,String
                    message IconsList{
                    	string iconsPosition = 1;		 //,图标具体方位,String,不校验,是,
                    	string uuid = 2;		 //,图标uuid,String,不校验,是,
                    }
                    repeated IconsList iconsList = 70;
                    string canUseKq = 71;	 //,是否可用卡券 ,String,不校验,是,
                    string unActualBuyUserLevel = 72;	 //,认购会员等级,String,不校验,是,
                    string iconsType = 73;	 //,可用卡劵图标类型 ,String,不校验,是,其中9999为无
                    string delegateNum = 74;	 //,委托金额 ,String,不校验,是
                    string leastTranAmount = 75;	 //,委托金额 ,String,不校验,是
            }
	PageInfo pageInfo = 1; //,产品列表,List,不校验,是,

	repeated ProductTradeInfoNewObject productTradeInfoList = 2;

	string isListed = 3; //,是否已挂牌 ,String,不校验,是,0-否1-是

    string isjump =4; //true:跳转。false：不跳转

    string jumpurl=5;//跳转url

    string isShare=6;//是否分享；0：否；1：是

    string scrollTime = 7; //,滚动时间 ,String,不校验,是,

    string displayNum = 8; //,显示项数 ,String,不校验,是,


}

message Ret_PBIFE_prdsubscribequery_prdQuerySubscribeTradeProductListNewHome{
	///ife/prdsubscribequery/prdQuerySubscribeTradeProductListNew.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_prdsubscribequery_prdQuerySubscribeTradeProductListNewHome data=3;


}

message REQ_PBIFE_prdsubscribequery_prdQuerySubscribeTradeProductListNewHome{
	///ife/prdsubscribequery/prdQuerySubscribeTradeProductListNew.html

            string pageIndex = 1;//  ,当前页,String,不校验,是,默认1
            string pageSize = 2;//  ,页大小,String,不校验,是,默认10
            string orderBy = 3;//  ,排序,String,不校验,是,
            string orderAsc = 4;//  ,升降序,String,不校验,是,
            string productCode = 5;//  ,产品编号,String,不校验,是,
            string productName = 6;//  ,产品名称,String,不校验,是,
            string marketingChannel = 7;//  ,销售对象,String,不校验,是,
            string terminalNo = 8;//  ,终端编号,String,不校验,是,11-网站，12-移动终端，13-微信，14-柜台，15-其他，16-接口
            string sellingStatus = 9;//  ,销售状态,String,不校验,是,0-敬请期待，1-售卖中，2-已售罄，3-已结束
            string productDeadLineTypeQuery = 10;//  ,短中长期产品,String,不校验,是,0-短期1-中期2-长期
            string buyerSmallestAmountBegin = 11;//  ,起购金额开始,String,不校验,是,
            string buyerSmallestAmountEnd = 12;//  ,产品编号和系列,String,不校验,是,
            string isBasedOnAccount = 13;//  ,产品编号和系列,String,不校验,是,
            string isOnlyNew = 14;//  ,新客专享,String,不校验,是,0-否1-是
            string productCodeAndSerialNo = 15;//  ,产品编号和系列,String,不校验,是,quanUsedProductCode|quanUsedSeriesCode
            string delegateType = 16;//  ,委托类型,String,不校验,是,默认null
            string uuids = 17;//  ,排序控件,String,不校验,是,用-分隔
            string deadLineQuery = 18;//  ,剩余期限,String,不校验,是,
            string expectedMaxAnnualRateQuery = 19;//  ,预期收益率,String,不校验,是,
            string riskLevelQuery = 20;//  ,风险等级,String,不校验,是,
            string subjectTypeQuery = 21;//  ,产品类型,String,不校验,是,
            string buyerSmallestAmountQuery = 22;//  ,起购金额,String,不校验,是,
            string saleObjectQuery =23;//  ,销售对象,String,不校验,是,
            string quanUsedProductCode = 24; //,核销产品编号,String,不校验,是,
            string quanUsedSeriesCode = 25; //,核销系列编号,String,不校验,是,
            string specialQryType = 26; //,用于区分个人企业，不能为null,必传
            string isShowYgd = 27;	 //,是否展示预挂单 1-展示 ,String,不校验,是

}